workloads/temporal-routes/httproute-grpc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-grpc
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: temporal-ts-2143-grpc
  hostnames:
    - temporal.ts.2143.me
  rules:
    - backendRefs:
        - name: temporal-frontend
          port: 7233
