workloads/temporal-routes/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-internal
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: temporal-ts-2143-https
  hostnames:
    - temporal.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth-security-headers
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-only
      backendRefs:
        - name: temporal-web
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-public
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: temporal-john2143-https
  hostnames:
    - temporal.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy-temporal
          port: 4180
