workloads/temporal-routes/tcproute-grpc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: temporal-grpc
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: temporal-ts-2143-grpc
  rules:
    - backendRefs:
        - name: temporal-frontend
          port: 7233
